[DevTools] Suspend Page.navigate command until navigation has finished

With browser side navigation, WCO::DidStartNavigation does not happen
synchronously after calling NavigationController::LoadURL(), which makes
Page.navigate command to be dispatched to old renderer during cross-process
navigations and yields a stale frame id.

This patch specifically works around the problem for Page.navigate
by calling back synchronously to RFDTAH.

BUG=747224

Change-Id: I44935a407a4223004ef9873a49fc18dabbbfe02a